--- a/src/components/ConfigPage/Config.css
+++ b/src/components/ConfigPage/Config.css
@@ -1,11 +1,3 @@
-.Config {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.Config-light {
-    color: #232127;
-}
-
-.Config-dark {
-    color: #e5e3e8;
+.logo {
+    content: url('../../images/Logo.png');
 }
